--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
         }
       }
 
-      .section-img {
-        background-image: url("./section-img.jpg");
-        background-repeat: no-repeat;
-        background-size: auto;
-      }
+      img {
+          width: 200px;
+          height: 300px;
+          object-fit: cover;
+        }
+
     </style>
 
 
@@ -63,8 +64,8 @@
                 <div class="col-sm-4 offset-md-1 py-4">
                     <h4 class="text-white">Contact</h4>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Like on Facebook</a></li>
-                        <li><a href="#" class="text-white">Email me</a></li>
+                        <li><a href="#" class="text-white">Instagram</a></li>
+                        <li><a href="#" class="text-white">Email</a></li>
                     </ul>
                 </div>
             </div>
@@ -88,12 +89,13 @@
     <section class="py-5 text-center section-img">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">SPOORTHI EVENTS</h1>
+                <h1 class="fw-light textfont">SPOORTHI EVENTS</h1>
                 <h4 class="fw-light">You dream it, we do it.</h4>
-                <p class="lead text-muted">We are a passionate team who likes to serve by decorating your happy moments with flowers.</p>
+                <p class="lead text-muted">We are a passionate team who likes to serve by decorating yours Events.</p>
+                <p class="text-muted">Be it Weddings, Birthdays or any big events, we sure can handle it.</p>
+                <p class="text-muted">Let's make a deal and you'll not regret it.</p>
                 <p>
                     <a href="#" class="btn btn-primary my-2">Contact</a>
-                    <a href="#" class="btn btn-secondary my-2">Explore</a>
                 </p>
             </div>
         </div>
@@ -105,19 +107,58 @@
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 <div class="col">
                     <div class="card shadow-sm">
-                        <img class="card-img-top" src="./event1.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="./images/event1.jpg" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img class="card-img-top" src="./images/event2.jpg" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img class="card-img-top" src="./images/event3.jpg" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img class="card-img-top" src="./images/event4.jpg" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img class="card-img-top" src="./images/event5.jpg" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img class="card-img-top" src="./images/event6.jpg" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img class="card-img-top" src="./images/event7.jpg" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img class="card-img-top" src="./images/event8.jpg" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img class="card-img-top" src="./images/event9.jpg" alt="Card image cap">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 </main>
 
-<footer class="text-muted py-5">
+<footer class="text-muted py-6">
     <div class="container">
         <p class="float-end mb-1">
-            <a href="#">powered by VAGSolve</a>
+            <a href="#">Hosted by VAGSolve</a>
         </p>
     </div>
 </footer>
