--- a/index.html
+++ b/index.html
@@ -45,6 +45,103 @@
           object-fit: cover;
         }
 
+      /* The Modal (background) */
+    .modal {
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+      -webkit-animation-name: fadeIn; /* Fade in the background */
+      -webkit-animation-duration: 0.4s;
+      animation-name: fadeIn;
+      animation-duration: 0.4s
+    }
+
+    /* Modal Content */
+    .modal-content {
+      bottom: 0;
+      background-color: #fefefe;
+      width: 50%;
+      -webkit-animation-name: slideIn;
+      -webkit-animation-duration: 0.4s;
+      animation-name: slideIn;
+      animation-duration: 0.4s;
+      margin-top: 14%;
+      margin-left: 25%;
+    }
+
+    /* The Close Button */
+    .close {
+      color: white;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: #000;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .modal-header {
+      padding: 2px 16px;
+      background-color: lightslategrey !important;
+      color: white;
+      font-style: oblique;
+    }
+
+    .modal-body {
+        padding: 2px 16px;
+        font-style: oblique;
+        color: darkolivegreen;
+    }
+
+    .modal-footer {
+      padding: 2px 16px;
+      background-color: lightslategrey !important;
+      color: white;
+      font-style: oblique;
+    }
+
+    /* Add Animation */
+    @-webkit-keyframes slideIn {
+      from {bottom: -300px; opacity: 0}
+      to {bottom: 0; opacity: 1}
+    }
+
+    @keyframes slideIn {
+      from {bottom: -300px; opacity: 0}
+      to {bottom: 0; opacity: 1}
+    }
+
+    @-webkit-keyframes fadeIn {
+      from {opacity: 0}
+      to {opacity: 1}
+    }
+
+    @keyframes fadeIn {
+      from {opacity: 0}
+      to {opacity: 1}
+    }
+
+    .section-img{
+        background-image: url("./images/section-img.jpg");
+        background-size: cover;
+        background-position: center;
+    }
+
+    .title-color{
+        color: #d63384 !important;
+    }
+
     </style>
 
 
@@ -65,7 +162,7 @@
                     <h4 class="text-white">Contact</h4>
                     <ul class="list-unstyled">
                         <li><a href="#" class="text-white">Instagram</a></li>
-                        <li><a href="#" class="text-white">Email</a></li>
+                        <li><a href="#" class="text-white">Facebook</a></li>
                     </ul>
                 </div>
             </div>
@@ -89,17 +186,40 @@
     <section class="py-5 text-center section-img">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light textfont">SPOORTHI EVENTS</h1>
-                <h4 class="fw-light">You dream it, we do it.</h4>
+                <h1 class="fw-light textfont title-color">SPOORTHI EVENTS</h1>
+                <h4 class="fw-light title-color" title-color>You dream it, we execute it.</h4>
                 <p class="lead text-muted">We are a passionate team who likes to serve by decorating yours Events.</p>
                 <p class="text-muted">Be it Weddings, Birthdays or any big events, we sure can handle it.</p>
                 <p class="text-muted">Let's make a deal and you'll not regret it.</p>
                 <p>
-                    <a href="#" class="btn btn-primary my-2">Contact</a>
+                    <a href="#" class="btn btn-primary my-2" id="myBtn">Contact</a>
                 </p>
             </div>
         </div>
     </section>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="close">&times;</span>
+                <h3>Contact Us</h3>
+            </div>
+            <div class="modal-body">
+                <label>NAME : Pradeep S</label></br></br>
+                <label>CONTACT : +91 8861438665, +91 8660068435</label></br></br>
+                <label>GMAIL : pradeeppradeep9922@gmail.com</label></br></br>
+                <label>ADDRESS : #182, 2nd Cross, 2nd Main Road, Balaji Layout, Behind Anupama Hospital, </br>
+                       &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp College Stop, Byadarahalli, Bangalore - 560091</label></br></br>
+            </div>
+            <div class="modal-footer">
+                <h4>Any time at your service!!!</h4>
+            </div>
+        </div>
+
+    </div>
 
     <div class="album py-5 bg-light">
         <div class="container">
@@ -163,6 +283,33 @@
     </div>
 </footer>
 
+<script>
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
