--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
         color: #d63384 !important;
     }
 
+    .text-wrap{
+        overflow-wrap: anywhere;
+    }
+
     </style>
 
 
@@ -210,9 +214,9 @@
             <div class="modal-body">
                 <label>NAME : Pradeep S</label></br></br>
                 <label>CONTACT : +91 8861438665, +91 8660068435</label></br></br>
-                <label>GMAIL : pradeeppradeep9922@gmail.com</label></br></br>
+                <label class="text-wrap">GMAIL : pradeeppradeep9922@gmail.com</label></br></br>
                 <label>ADDRESS : #182, 2nd Cross, 2nd Main Road, Balaji Layout, Behind Anupama Hospital, </br>
-                       &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp College Stop, Byadarahalli, Bangalore - 560091</label></br></br>
+                       College Stop, Byadarahalli, Bangalore - 560091</label></br></br>
             </div>
             <div class="modal-footer">
                 <h4>Any time at your service!!!</h4>
